# LMCache-Ascend

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirement.txt  setup.py
csrc/: CMakeLists.txt  cachegen_kernels.cpp  cachegen_kernels.h  managed_mem.cpp  managed_mem.h  mem_alloc.cpp  mem_alloc.h  mem_kernels.cpp  mem_kernels.h  pos_kernels.cpp  pos_kernels.h  pybind.cpp  types.h  utils.cpp  utils.h
docker/: Dockerfile.310p.openEuler  Dockerfile.a2.openEuler  kv-connector-v1.diff
docs/: deployment.md
examples/blending/: README.md  script.py  since_b5b7e0ecc765adfec4ec4efdd14bfc7cce715e23.diff
lmcache_ascend/: __init__.py
lmcache_ascend/integration/vllm/: lmcache_ascend_connector_v1.py  vllm_v1_adapter.py
lmcache_ascend/v1/: cache_engine.py  memory_management.py  npu_connector.py  system_detection.py  tokens_hash.py
lmcache_ascend/v1/blend/: blender.py  positional_encoding.py  utils.py
lmcache_ascend/v1/blend/attention/: attention.py
lmcache_ascend/v1/blend/models/: llama.py  models.py  qwen3.py  utils.py
tests/: conftest.py
tests/v1/: test_cache_engine.py  test_connector.py  test_mem_kernels.py  test_memory_management.py  utils.py
tests/v1/storage_backend/: test_local_cpu_backend.py  test_local_disk_backend.py
